--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 
         <div id="footer_items">
             <span id="copyright">
-                &copy 2024 Larissa Kich
+                &copy 2024 Luiz Gustavo
             </span>
 
             <div class="social-media-buttons">
